[package]
name = "turtle"
version = "0.1.0"
authors = ["R. Miles McCain <development-machine@sendmiles.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
rustyline = "6"
rustyline-derive = "0.3"
ansi_term = "0.12"
relative-path = "1.3.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'