[package]
name = "turtle-lang"
version = "0.1.0"
authors = ["R. Miles McCain <turtle@sendmiles.email>"]
edition = "2018"
repository = "https://github.com/milesmcc/turtle-lang"
license = "MIT"
description = "A humble and friendly Lisp built for the web"

[lib]
name = "turtle"
path = "src/lib.rs"

[[bin]]
name = "turtle-bin"
path = "src/bin.rs"

[dependencies]
pest = "2"
pest_derive = "2"
rustyline = "6"
rustyline-derive = "0.3"
ansi_term = "0.12"
relative-path = "1.3.2"
regex = "1"
clap = "2"
rand = "0.7.3"

[profile.release]
lto = true
codegen-units = 1