[package]
name = "turtle-lang"
version = "0.1.1"
authors = ["R. Miles McCain <turtle@sendmiles.email>"]
edition = "2018"
readme = "README.md"
keywords = ["lisp", "interpreter", "functional", "language"]
repository = "https://github.com/milesmcc/turtle-lang"
license = "MIT"
description = "A humble, fun, and friendly Lisp"

[lib]
name = "turtle"
path = "src/lib.rs"

[[bin]]
name = "turtle"
path = "src/bin.rs"

[dependencies]
pest = "2"
pest_derive = "2"
rustyline = "6"
rustyline-derive = "0.3"
ansi_term = "0.12"
relative-path = "1.3.2"
regex = "1"
clap = "2"
rand = "0.7.3"